alter link video tutorial

--- a/.github/workflows/hello_act.yml
+++ b/.github/workflows/hello_act.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Run test
       run: |
-        echo "hello act"
+        echo "hello act!"
         echo $test_var
         echo $test_var2
         echo $secret
